Remove versions.yml from output

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -46,7 +46,8 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/stats/" },
             mode: params.publish_dir_mode,
-            enabled: true
+            enabled: true,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
@@ -57,6 +58,7 @@ process {
             path: { "${params.outdir}/validation/stats" },
             mode: params.publish_dir_mode,
             enabled: true,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
     // IMPUTE
@@ -65,7 +67,8 @@ process {
         publishDir = [
             path: { "${params.outdir}/imputation/stats" },
             mode: params.publish_dir_mode,
-            enabled: true
+            enabled: true,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 }
