--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -74,6 +74,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/imputation/glimpse1/concat" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
