--- a/conf/steps/imputation_glimpse2.config
+++ b/conf/steps/imputation_glimpse2.config
@@ -45,6 +45,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/imputation/glimpse2/concat" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
