--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -48,6 +48,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/imputation/quilt/concat" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
