--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -56,6 +56,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/imputation/stitch/concat" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
