--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -15,6 +15,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: false
         ]
         tag = {"${meta.id} ${meta.chr}"}
@@ -55,6 +56,7 @@ process {
         ext.prefix    = { "${meta.id}_${meta.chr}_biallelic_snps" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/normalized" },
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
         }
@@ -63,6 +65,7 @@ process {
         ext.args     = "--tbi"
         publishDir = [
             path: { "${params.outdir}/prep_panel/normalized" },
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
         }
@@ -73,6 +76,7 @@ process {
         ext.prefix    = { "${meta.id}_${meta.chr}_biallelic_removed_samples" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/normalized" },
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
     }
@@ -81,6 +85,7 @@ process {
         ext.args     = "--tbi"
         publishDir = [
             path: { "${params.outdir}/prep_panel/normalized" },
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
     }
@@ -89,6 +94,7 @@ process {
         ext.prefix   = { "${meta.id}_${meta.chr}" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/compute_freq" },
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
     }
@@ -97,14 +103,7 @@ process {
         ext.args     = "--tbi"
         publishDir = [
             path: { "${params.outdir}/prep_panel/compute_freq" },
-            enabled: true
-        ]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_CONVERT' {
-        ext.args = {"--haplegendsample ${meta.id}_${meta.chr}"}
-        publishDir = [
-            path: { "${params.outdir}/prep_panel/compute_freq" },
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
     }
@@ -114,6 +113,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/phasing" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: false
         ]
         tag = {"${meta.id} ${meta.chr}"}
@@ -139,6 +139,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/haplegend/" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
     }
@@ -156,6 +157,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/sites/vcf/" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
     }
@@ -165,6 +167,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/sites/vcf/" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
     }
@@ -186,6 +189,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/sites/tsv/" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
     }
@@ -200,6 +204,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/sites/tsv/" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
     }
@@ -218,6 +223,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
         tag = {"${meta.id} ${meta.chr}"}
@@ -228,6 +234,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/glimpse1/" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
     }
@@ -237,6 +244,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/glimpse2/" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
     }
@@ -246,6 +254,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/glimpse2/" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
     }
