--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -138,6 +138,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/haplegend/" },
             mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
     }
