Update test and align params

--- a/conf/test.config
+++ b/conf/test.config
@@ -25,18 +25,18 @@ params {
 
     // Genome references
     fasta  = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
-    panel  = "${projectDir}/tests/csv/panel_2.csv"
+    panel  = "${projectDir}/tests/csv/panel.csv"
     phased = true
 
     // Pipeline steps
-    steps   = "impute"
+    steps  = "impute"
 
     // External params
-    chunks = "${projectDir}/tests/csv/chunks.csv"
+    chunks  = "${projectDir}/tests/csv/chunks.csv"
     posfile = "${projectDir}/tests/csv/posfile.csv"
 
     // Impute tools
-    tools  = "glimpse1"
+    tools   = "glimpse1"
 }
 
 
