--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -24,15 +24,16 @@ params {
     max_time   = '6.h'
 
     // Input data
-    input                  = "${projectDir}/tests/csv/sample_sim_full.csv"
-    panel                  = "${projectDir}/tests/csv/panel_full.csv"
+    input  = "${projectDir}/tests/csv/sample_sim_full.csv"
+    panel  = "${projectDir}/tests/csv/panel_full.csv"
+    map    = "${projectDir}/tests/csv/map.csv"
 
     // Pipeline steps
-    steps                   = "all"
+    steps  = "all"
 
     // Panelprep optional args
-    remove_samples        = "NA12878,NA12891,NA12892"
+    remove_samples = "NA12878,NA12891,NA12892"
 
     // Impute tools
-    tools                 = "glimpse1"
+    tools = "glimpse1"
 }
