--- a/conf/modules.config
+++ b/conf/modules.config
@@ -31,18 +31,18 @@ process {
     // Simulation
     // Coverage process
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_TRT' {
-        ext.prefix = { "${meta.id}_A-truth" }
+        ext.prefix = { "${meta.id}.A-truth" }
         publishDir = [ enabled: false ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_SIM' {
-        ext.prefix = { "${meta.id}_B-sim" }
+        ext.prefix = { "${meta.id}.B-sim" }
         publishDir = [ enabled: false ]
     }
 
     // VCF
     // PANEL
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BCFTOOLS_STATS_PANEL' {
-        ext.prefix = { "${meta.id}" }
+        ext.prefix = { "${meta.id}.panel" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/stats/" },
             mode: params.publish_dir_mode,
@@ -53,7 +53,7 @@ process {
 
     // TRUTH
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BCFTOOLS_STATS_TRUTH' {
-        ext.prefix = { "${meta.id}_truth" }
+        ext.prefix = { "${meta.id}.truth" }
         publishDir = [
             path: { "${params.outdir}/validation/stats" },
             mode: params.publish_dir_mode,
@@ -63,7 +63,7 @@ process {
     }
     // IMPUTE
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BCFTOOLS_STATS_TOOLS' {
-        ext.prefix = { "${meta.id}_${meta.tools}" }
+        ext.prefix = { "${meta.id}.${meta.tools}" }
         publishDir = [
             path: { "${params.outdir}/imputation/stats" },
             mode: params.publish_dir_mode,
