--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -80,7 +80,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE1:BCFTOOLS_CONCAT' {
         ext.args   = ["--ligate", "--output-type z"].join(' ')
-        ext.prefix = { "${meta.id}_glimpse1" }
+        ext.prefix = { "${meta.id}.glimpse1" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE1:BCFTOOLS_INDEX' {
