--- a/conf/steps/imputation_glimpse2.config
+++ b/conf/steps/imputation_glimpse2.config
@@ -51,7 +51,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE2:BCFTOOLS_CONCAT' {
         ext.args   = ["--ligate", "--output-type z"].join(' ')
-        ext.prefix = { "${meta.id}_glimpse2" }
+        ext.prefix = { "${meta.id}.glimpse2" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE2:BCFTOOLS_INDEX' {
