--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -213,6 +213,10 @@ process {
         publishDir = [ enabled: false ]
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_PANEL:BCFTOOLS_CONCAT' {
+        ext.prefix = { "${meta.id}.panel" }
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_PANEL:BCFTOOLS_INDEX' {
         ext.args = "--tbi"
     }
