--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -52,7 +52,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:BCFTOOLS_CONCAT' {
         ext.args = ["--ligate", "--output-type z",].join(' ')
-        ext.prefix = { "${meta.id}_A-truth" }
+        ext.prefix = { "${meta.id}.A-truth" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:BCFTOOLS_INDEX' {
