--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -54,12 +54,11 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_QUILT:BCFTOOLS_CONCAT' {
         ext.args = ["--ligate", "--output-type z",].join(' ')
-        ext.prefix = { "${meta.id}_quilt" }
+        ext.prefix = { "${meta.id}.quilt" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_QUILT:BCFTOOLS_INDEX' {
         ext.args     = "--tbi"
-        ext.prefix = { "${meta.id}_quilt" }
     }
 
 }
