--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -30,7 +30,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:STITCH' {
-        ext.prefix = { "${meta.id}_stitch" }
+        ext.prefix = { "${meta.id}.stitch" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:BCFTOOLS_INDEX' {
@@ -44,12 +44,10 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:BCFTOOLS_CONCAT' {
         ext.args   = ["--ligate", "--output-type z"].join(' ')
-        ext.prefix = { "${meta.id}_stitch" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:BCFTOOLS_INDEX' {
         ext.args   = "--tbi"
-        ext.prefix = { "${meta.id}_stitch" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SAMPLES_BCFTOOLS:.*' {
@@ -62,7 +60,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SAMPLES_BCFTOOLS:BCFTOOLS_PLUGINSPLIT' {
         ext.args   = "-Oz"
-        ext.suffix = "_stitch"
+        ext.suffix = ".stitch"
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SAMPLES_BCFTOOLS:BCFTOOLS_INDEX' {
