--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -181,6 +181,12 @@ process {
         ext.args   = "'{ gsub(\",\", \"\\t\") ; key = \$1 FS \$2 } !seen[key]++'" // Remove duplicates
         ext.prefix = { "${meta.id}_${meta.chr}_posfile_stitch" }
         ext.suffix = "txt"
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/posfile/" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: true
+        ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:TABIX_BGZIP' {
