--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -16,6 +16,7 @@ process {
         tag = {"${meta.id} ${meta.chr}"}
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:SAMTOOLS_VIEW' {
+        ext.args   = "--output-fmt bam"
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}" }
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:.*' {
@@ -30,8 +31,10 @@ process {
         publishDir = [enabled: false]
         ext.prefix = { "${meta1.id}_C${meta1.chr ?: "all"}.depth" }
         tag = {"${meta1.id}"}
+        tag = {"${meta.id} ${meta.chr}"}
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_VIEW' {
+        ext.args   = "--output-fmt bam"
         ext.prefix = { params.input_region ?
             "${meta.id}_D${meta.depth}_C${meta.chr ?: "all"}" :
             "${meta.id}"
@@ -41,6 +44,7 @@ process {
             mode: params.publish_dir_mode,
             saveAs: {  params.input_region ? null : it  }
         ]
+        tag = {"${meta.id} ${meta.chr}"}
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_INDEX_1' {
         publishDir = [
