--- a/subworkflows/local/bam_chr_rename/tests/nextflow.config
+++ b/subworkflows/local/bam_chr_rename/tests/nextflow.config
@@ -3,10 +3,13 @@ params {
 }
 
 process {
+    withName: GAWK {
+        ext.args2  = "'BEGIN {FS=\"\\t\"} NR==1 { if (\$1 ~ /^chr/) { print \"chr\" } else { print \"nochr\" } }'"
+        ext.prefix = { "${meta.id}_chrrename" }
+        ext.suffix = 'txt'
+    }
+
     withName: SAMTOOLS_REHEADER {
-        ext.args = [
-            "--no-version"
-        ].join(' ')
         ext.prefix = { "${meta.id}_chrrename" }
     }
 }
