Move samtools merge to bam region

--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -11,6 +11,7 @@
 */
 
 process {
+    // Optional subworkflow to extract regions
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:.*' {
         publishDir = [ enabled: false ]
         tag = {"${meta.id} ${meta.chr}"}
@@ -19,6 +20,16 @@ process {
         ext.args   = "--output-fmt bam"
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}" }
     }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:SAMTOOLS_MERGE' {
+        ext.prefix = { "${meta.id}" }
+        tag = {"${meta.id} ${meta.chr}"}
+    }
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:SAMTOOLS_INDEX_2' {
+        ext.args = ""
+    }
+
+    // Downsampling subworkflow
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:.*' {
         publishDir = [
             path: { "${params.outdir}/simulation/" },
@@ -30,15 +41,19 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_DEPTH' {
         publishDir = [enabled: false]
         ext.prefix = { "${meta1.id}_C${meta1.chr ?: "all"}.depth" }
-        tag = {"${meta1.id}"}
-        tag = {"${meta.id} ${meta.chr}"}
+        tag = {"${meta1.id} ${meta1.chr ?: "all"}"}
     }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:GAWK' {
+        publishDir = [enabled: false]
+        ext.args2 = "'{ total += \$3 } END { print total/NR }'"
+        ext.prefix = { "${meta.id}_C${meta.chr ?: "all"}.depth.mean" }
+        tag = {"${meta.id} ${meta.chr ?: "all"}"}
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_VIEW' {
         ext.args   = "--output-fmt bam"
-        ext.prefix = { params.input_region ?
-            "${meta.id}_D${meta.depth}_C${meta.chr ?: "all"}" :
-            "${meta.id}"
-        }
+        ext.prefix = { "${meta.id}" }
         publishDir = [
             path: { "${params.outdir}/simulation/" },
             mode: params.publish_dir_mode,
@@ -46,19 +61,21 @@ process {
         ]
         tag = {"${meta.id} ${meta.chr}"}
     }
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_INDEX_1' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_INDEX' {
         publishDir = [
             path: { "${params.outdir}/simulation/" },
             mode: params.publish_dir_mode,
             saveAs: {  params.input_region ? null : it  }
         ]
     }
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_MERGE' {
-        ext.prefix = { "${meta.id}" }
-        tag = {"${meta.id}"}
+
+    // Coverage process
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_TRT' {
+        ext.prefix = { "${meta.id}_truth" }
+        publishDir = [ enabled: false ]
     }
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_INDEX_2' {
-        ext.args = ""
-        tag = {"${meta.id}"}
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_SIM' {
+        ext.prefix = { "${meta.id}" }
+        publishDir = [ enabled: false ]
     }
 }
