--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -29,7 +29,7 @@ process {
             "-Aim",
             "-C alleles"
         ].join(' ')
-        ext.prefix = { "${meta.id}_truth" }
+        ext.prefix = { "${meta.id}_truth.call" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_ANNOTATE' {
@@ -43,6 +43,7 @@ process {
 
     // Concatenate the truth set
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:.*' {
+        ext.prefix = { "${meta.id}_truth_concat" }
         publishDir = [
             path: { "${params.outdir}/validation/concat" },
             mode: params.publish_dir_mode,
@@ -52,7 +53,6 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:BCFTOOLS_CONCAT' {
         ext.args = ["--ligate", "--output-type z",].join(' ')
-        ext.prefix = { "${meta.id}.A-truth" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:BCFTOOLS_INDEX' {
@@ -66,11 +66,10 @@ process {
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
-        tag = {"${meta.id} ${meta.panel}"}
+        tag = {"${meta.id} ${meta.panel} ${meta.tools}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GLIMPSE2_CONCORDANCE' {
-        ext.args   = "--out-r2-per-site"
         ext.prefix = { "${meta.id}_P${meta.panel}_T${meta.tools}.concordance" }
         publishDir = [ enabled: false ]
     }
