Fix config file

--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -31,11 +31,6 @@ process {
 
     // Downsampling subworkflow
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:.*' {
-        publishDir = [
-            path: { "${params.outdir}/simulation/" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-        ]
         tag = {"${meta.id} ${meta.chr}"}
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_DEPTH' {
@@ -53,29 +48,20 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_VIEW' {
         ext.args   = "--output-fmt bam"
-        ext.prefix = { "${meta.id}" }
+        ext.prefix = { "${meta.id}_D${meta.depth}_C${meta.chr ?: "all"}" }
         publishDir = [
             path: { "${params.outdir}/simulation/" },
             mode: params.publish_dir_mode,
-            saveAs: {  params.input_region ? null : it  }
+            saveAs: {  filename -> filename.equals('versions.yml') ? null : filename  }
         ]
         tag = {"${meta.id} ${meta.chr}"}
     }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_INDEX' {
         publishDir = [
             path: { "${params.outdir}/simulation/" },
             mode: params.publish_dir_mode,
-            saveAs: {  params.input_region ? null : it  }
+            saveAs: {  filename -> filename.equals('versions.yml') ? null : filename  }
         ]
-    }
-
-    // Coverage process
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_TRT' {
-        ext.prefix = { "${meta.id}_truth" }
-        publishDir = [ enabled: false ]
-    }
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_SIM' {
-        ext.prefix = { "${meta.id}" }
-        publishDir = [ enabled: false ]
     }
 }
