--- a/conf/steps/imputation_glimpse2.config
+++ b/conf/steps/imputation_glimpse2.config
@@ -19,7 +19,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE2:GLIMPSE2_PHASE' {
         ext.prefix   = { "${meta.id}_${meta.chunk.replace(':','_')}_glimpse2" }
-        ext.args     = "--keep-monomorphic-ref-sites"
+        ext.args     = {"--keep-monomorphic-ref-sites --ind-name ${meta.id}"}
         ext.suffix   = "bcf"
         publishDir   = [ enabled: false ]
     }
