Remove process for samples and only publish once panel

--- a/conf/test_panelprep.config
+++ b/conf/test_panelprep.config
@@ -20,10 +20,12 @@ params {
     max_time   = '1.h'
 
     // Genome references
-    fasta        = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
-    input_region = "${projectDir}/tests/csv/region.csv"
-    panel        = "${projectDir}/tests/csv/panel.csv"
-    phased       = false
+    fasta          = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
+    input_region   = "${projectDir}/tests/csv/region.csv"
+    panel          = "${projectDir}/tests/csv/panel.csv"
+    phased         = true
+    compute_freq   = true
+    remove_samples = "HG00096,HG00097,HG00099,HG00100"
 
     // Pipeline steps
     steps   = "panelprep"
