--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -52,28 +52,31 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_DEL_MLT_ALL' {
-        ext.args      = '-v snps -m 2 -M 2 -Oz'
-        ext.prefix    = { "${meta.id}_${meta.chr}_biallelic_snps" }
+        ext.args   = {
+            ["-v snps", "-m 2", "-M 2",
+            params.remove_samples ? "-s^${params.remove_samples}" : '',
+            "-Oz"
+            ].join(' ')
+        }
+        ext.prefix = { "${meta.id}_${meta.chr}_biallelic_snps" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/normalized" },
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            saveAs: { filename -> params.compute_freq ? null : filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
-        }
+    }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_2' {
         ext.args     = "--tbi"
         publishDir = [
             path: { "${params.outdir}/prep_panel/normalized" },
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            saveAs: { filename -> params.compute_freq ? null : filename.equals('versions.yml') ? null : filename },
             enabled: true
         ]
-        }
+    }
 
-    // (Optional) Subworkflow: Remove samples from panel
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_DEL_SPL' {
-        ext.args      = { "-Oz -s^${params.remove_samples}" }
-        ext.prefix    = { "${meta.id}_${meta.chr}_biallelic_removed_samples" }
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:VCFLIB_VCFFIXUP' {
+        ext.prefix   = { "${meta.id}_${meta.chr}" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/normalized" },
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
@@ -86,23 +89,6 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/normalized" },
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: true
-        ]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:VCFLIB_VCFFIXUP' {
-        ext.prefix   = { "${meta.id}_${meta.chr}" }
-        publishDir = [
-            path: { "${params.outdir}/prep_panel/compute_freq" },
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: true
-        ]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_4' {
-        ext.args     = "--tbi"
-        publishDir = [
-            path: { "${params.outdir}/prep_panel/compute_freq" },
             enabled: true
         ]
     }
@@ -127,7 +113,6 @@ process {
     }
 
     // Subworkflow: VCF_SITES_EXTRACT_BCFTOOLS
-
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:.*' {
         publishDir = [ enabled: false ]
         tag = {"${meta.id} ${meta.chr}"}
