--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -51,7 +51,7 @@ process {
         publishDir = [enabled: false]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_DEL_MLT_ALL' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_VIEW' {
         ext.args   = {
             ["-v snps", "-m 2", "-M 2",
             params.remove_samples ? "-s^${params.remove_samples}" : '',
