--- a/subworkflows/local/bam_chr_check_samtools/tests/nextflow_rename.config
+++ b/subworkflows/local/bam_chr_check_samtools/tests/nextflow_rename.config
@@ -4,11 +4,12 @@ params {
 }
 
 process {
-    withName: BCFTOOLS_ANNOTATE {
-        ext.args = [
-            "-Oz",
-            "--no-version"
-        ].join(' ')
+    withName: GAWK {
+        ext.args2  = "'BEGIN {FS=\"\\t\"} NR==1 { if (\$1 ~ /^chr/) { print \"chr\" } else { print \"nochr\" } }'"
         ext.prefix = { "${meta.id}_chrrename" }
+        ext.suffix = 'txt'
+    }
+    withName: 'PREPROCESS:SAMTOOLS_REHEADER' {
+        ext.prefix = { "${meta.id}_nochr" }
     }
 }
