--- a/nf-test.config
+++ b/nf-test.config
@@ -11,4 +11,8 @@ config {
 
     // run all test with the defined docker profile from the main nextflow.config
     profile ""
+
+    plugins {
+        load "nft-bam@0.2.0"
+    }
 }
