Fix check contig names

--- a/workflows/chrcheck/tests/nextflow_rename.config
+++ b/workflows/chrcheck/tests/nextflow_rename.config
@@ -11,4 +11,7 @@ process {
         ].join(' ')
         ext.prefix = { "${meta.id}_chrrename" }
     }
+    withName: 'PREPROCESS:SAMTOOLS_REHEADER' {
+        ext.prefix = { "${meta.id}_nochr" }
+    }
 }
