--- a/nf-test.config
+++ b/nf-test.config
@@ -12,6 +12,10 @@ config {
     configFile "./nextflow.config"
     configFile "tests/config/nf-test.config"
 
+    stage {
+        copy "./nextflow_schema.json"
+    }
+
     // run all test with the defined docker profile from the main nextflow.config
     profile ""
 }
