--- a/nf-test.config
+++ b/nf-test.config
@@ -3,7 +3,7 @@ config {
         load "nft-bam@0.2.0"
     }
     // location for all nf-tests
-    testsDir "workflows"
+    testsDir "workflows/phaseimpute"
 
     // nf-test directory including temporary files for each test
     workDir System.getenv("NXF_TEST_DIR") ?: ".nf-test"
