--- a/conf/test.config
+++ b/conf/test.config
@@ -24,9 +24,10 @@ params {
     input_region = "${projectDir}/tests/csv/region.csv"
 
     // Genome references
-    fasta  = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
-    panel  = "${projectDir}/tests/csv/panel.csv"
-    phased = true
+    fasta     = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
+    fasta_fai = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa.fai"
+    panel     = "${projectDir}/tests/csv/panel.csv"
+    phased    = true
 
     // Pipeline steps
     steps  = "impute"
