Use legend file for posfile and simplify usage

--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -24,6 +24,12 @@ process {
         publishDir = [ enabled: false ]
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE1:BAM_GL_BCFTOOLS:GAWK' {
+        ext.args   = "'NR>1 { split(\$1, a, \"[:-_]\"); print a[1], \$2, \$3 \",\" \$4 }'"
+        ext.prefix = { "${meta.id}" }
+        ext.suffix = "tsv"
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE1:BAM_GL_BCFTOOLS:BCFTOOLS_MPILEUP' {
         ext.args = [
             "-I",
