--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -11,22 +11,16 @@
 */
 
 process {
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:.*' {
-        publishDir = [enabled: false]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:POSFILE_PREPARE_GAWK:GUNZIP' {
-        ext.prefix = { "${meta.id}_${meta.chr}_original_posfile" }
-        publishDir = [enabled: false]
-        tag = {"${meta.id} ${meta.chr}"}
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:POSFILE_PREPARE_GAWK:GAWK' {
-        ext.args   = "'{ gsub(\",\", \"\\t\") ; key = \$1 FS \$2 } !seen[key]++'" // Remove duplicates
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_INPUT_STITCH:GAWK' {
+        ext.args2  = "'BEGIN { OFS=\"\\t\" } NR>1  { split(\$1, a, \"[:-_]\"); print a[1], \$2, \$3, \$4 }'" // Remove duplicates
         ext.prefix = { "${meta.id}_${meta.chr}_posfile_stitch" }
         ext.suffix = "txt"
         publishDir = [enabled: false]
         tag = {"${meta.id} ${meta.chr}"}
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:.*' {
+        publishDir = [enabled: false]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:STITCH' {
