Improve output naming after simulation

--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -48,7 +48,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_VIEW' {
         ext.args   = "--output-fmt bam"
-        ext.prefix = { "${meta.id}_D${meta.depth}" }
+        ext.prefix = { "${meta.id}_depth_${meta.depth}x" }
         publishDir = [
             path: { "${params.outdir}/simulation/" },
             mode: params.publish_dir_mode,
