--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -163,7 +163,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:GAWK' {
-        ext.args   = "'{ gsub(\",\", \"\\t\") ; key = \$1 FS \$2 } !seen[key]++'" // Remove duplicates
+        ext.args2  = "'{ gsub(\",\", \"\\t\") ; key = \$1 FS \$2 } !seen[key]++'" // Remove duplicates
         ext.prefix = { "${meta.id}_${meta.chr}_posfile_stitch" }
         ext.suffix = "txt"
         publishDir = [
