--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -20,7 +20,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:GAWK' {
-        ext.args   = "'NR>1 { split(\$1, a, \"[:-_]\"); print a[1], \$2, \$3 \",\" \$4 }'"
+        ext.args2  = "'NR>1 { split(\$1, a, \"[:-_]\"); print a[1], \$2, \$3 \",\" \$4 }'"
         ext.prefix = { "${meta.id}" }
         ext.suffix = "tsv"
     }
@@ -90,7 +90,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GAWK' {
-        ext.args   = "'(NR == 1) || (FNR > 1)'" // Skip header line
+        ext.args2  = "'(NR == 1) || (FNR > 1)'" // Skip header line
         ext.suffix = { "txt" }
         tag = {"Test Quality"}
     }
