Create different posfile samplesheet to test minimal requirement

--- a/conf/test.config
+++ b/conf/test.config
@@ -34,7 +34,7 @@ params {
 
     // External params
     chunks  = "${projectDir}/tests/csv/chunks.csv"
-    posfile = "${projectDir}/tests/csv/posfile.csv"
+    posfile = "${projectDir}/tests/csv/posfile_legend.csv"
 
     // Impute tools
     tools   = "glimpse1"
