--- a/conf/test_stitch.config
+++ b/conf/test_stitch.config
@@ -25,7 +25,7 @@ params {
 
     // Genome references
     fasta   = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
-    posfile = "${projectDir}/tests/csv/posfile.csv"
+    posfile = "${projectDir}/tests/csv/posfile_legend.csv"
 
     // Pipeline steps
     steps   = "impute"
