--- a/conf/test_validate.config
+++ b/conf/test_validate.config
@@ -26,7 +26,7 @@ params {
 
     // Genome references
     fasta   = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
-    posfile = "${projectDir}/tests/csv/posfile.csv"
+    posfile = "${projectDir}/tests/csv/posfile_vcf_index.csv"
     map     = "${projectDir}/tests/csv/map.csv"
 
     // Pipeline steps
