--- a/conf/test_quilt.config
+++ b/conf/test_quilt.config
@@ -32,7 +32,7 @@ params {
 
     // External params
     chunks  = "${projectDir}/tests/csv/chunks.csv"
-    posfile = "${projectDir}/tests/csv/posfile.csv"
+    posfile = "${projectDir}/tests/csv/posfile_hap_legend.csv"
 
     // Impute tools
     tools   = "quilt"
