add dog config to test panelprep

--- a/nextflow.config
+++ b/nextflow.config
@@ -218,15 +218,16 @@ profiles {
         executor.memory         = 8.GB
     }
 
-    test            { includeConfig 'conf/test.config'          }
-    test_full       { includeConfig 'conf/test_full.config'     }
-    test_sim        { includeConfig 'conf/test_sim.config'      }
-    test_validate   { includeConfig 'conf/test_validate.config' }
-    test_all        { includeConfig 'conf/test_all.config'      }
-    test_quilt      { includeConfig 'conf/test_quilt.config'    }
-    test_stitch     { includeConfig 'conf/test_stitch.config'   }
-    test_glimpse2   { includeConfig 'conf/test_glimpse2.config'   }
-    test_panelprep  { includeConfig 'conf/test_panelprep.config'}
+    test                { includeConfig 'conf/test.config'              }
+    test_full           { includeConfig 'conf/test_full.config'         }
+    test_sim            { includeConfig 'conf/test_sim.config'          }
+    test_validate       { includeConfig 'conf/test_validate.config'     }
+    test_all            { includeConfig 'conf/test_all.config'          }
+    test_quilt          { includeConfig 'conf/test_quilt.config'        }
+    test_stitch         { includeConfig 'conf/test_stitch.config'       }
+    test_glimpse2       { includeConfig 'conf/test_glimpse2.config'     }
+    test_panelprep      { includeConfig 'conf/test_panelprep.config'    }
+    test_dog_panelprep  { includeConfig 'conf/test_dog_panelprep.config'}
 
 
 }
